# Orbit-Code

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MODULE.bazel  NOTICE  README.md  SECURITY.md  announcement_tip.toml  cliff.toml  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml
codex-rs/: CLAUDE.md  Cargo.toml  README.md  default.nix
codex-rs/.cargo/: AGENTS.md  CLAUDE.md
codex-rs/.config/: AGENTS.md  CLAUDE.md  nextest.toml
codex-rs/.github/: AGENTS.md  CLAUDE.md
codex-rs/.github/workflows/: AGENTS.md
codex-rs/analytics/: BUILD.bazel  Cargo.toml
codex-rs/analytics/src/: analytics_client.rs  analytics_client_tests.rs
codex-rs/ansi-escape/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/ansi-escape/src/: CLAUDE.md
codex-rs/anthropic/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/anthropic/src/: CLAUDE.md  client.rs  error.rs  lib.rs  stream.rs  token_refresh.rs  types.rs
codex-rs/app-server/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  README.md
codex-rs/app-server-client/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/app-server-client/src/: AGENTS.md  CLAUDE.md  lib.rs  remote.rs
codex-rs/app-server-protocol/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/app-server-protocol/schema/: CLAUDE.md
codex-rs/app-server-protocol/src/: AGENTS.md  CLAUDE.md  experimental_api.rs  export.rs  jsonrpc_lite.rs
codex-rs/app-server-protocol/tests/: CLAUDE.md  schema_fixtures.rs
codex-rs/app-server-test-client/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/app-server-test-client/scripts/: CLAUDE.md
codex-rs/app-server-test-client/src/: CLAUDE.md  lib.rs  main.rs
codex-rs/app-server/src/: CLAUDE.md  app_server_tracing.rs  bespoke_event_handling.rs  command_exec.rs  config_api.rs  dynamic_tools.rs  external_agent_config_api.rs  filters.rs  fs_api.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  message_processor.rs  models.rs  orbit_code_message_processor.rs  outgoing_message.rs  server_request_error.rs  thread_state.rs  thread_status.rs  transport.rs
codex-rs/apply-patch/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/arg0/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/artifacts/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  README.md
codex-rs/async-utils/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/backend-client/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/chatgpt/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/cli/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/cloud-requirements/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/cloud-tasks/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/cloud-tasks-client/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/codex-api/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/codex-backend-openapi-models/: BUILD.bazel  Cargo.toml
codex-rs/codex-client/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/codex-experimental-api-macros/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/config/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/connectors/: AGENTS.md  BUILD.bazel  Cargo.toml
codex-rs/core/: BUILD.bazel  CLAUDE.md  Cargo.toml  README.md  config.schema.json  gpt-5.1-codex-max_prompt.md  gpt-5.2-codex_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  models.json  prompt.md  prompt_with_apply_patch_instructions.md
codex-rs/core-skills/: BUILD.bazel  Cargo.toml
codex-rs/debug-client/: AGENTS.md  CLAUDE.md  Cargo.toml
codex-rs/docs/: AGENTS.md  CLAUDE.md
codex-rs/environment/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/exec/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/exec-server/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/execpolicy/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/execpolicy-legacy/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/features/: BUILD.bazel  Cargo.toml
codex-rs/feedback/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/file-search/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/git-utils/: BUILD.bazel  Cargo.toml  README.md
codex-rs/hooks/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/instructions/: BUILD.bazel  Cargo.toml
codex-rs/keyring-store/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/lancedb/: CLAUDE.md
codex-rs/linux-sandbox/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  README.md  build.rs
codex-rs/lmstudio/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/login/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/mcp-server/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/network-proxy/: BUILD.bazel  CLAUDE.md  Cargo.toml  README.md
codex-rs/ollama/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/otel/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/package-manager/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/plugin/: BUILD.bazel  Cargo.toml
codex-rs/process-hardening/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/protocol/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/responses-api-proxy/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/rmcp-client/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/rollout/: BUILD.bazel  Cargo.toml
codex-rs/sandboxing/: BUILD.bazel  Cargo.toml
codex-rs/secrets/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/shell-command/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/shell-escalation/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/skills/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/state/: BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/stdio-to-uds/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/terminal-detection/: BUILD.bazel  Cargo.toml
codex-rs/test-macros/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/tui/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/tui_app_server/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml
codex-rs/utils/: AGENTS.md  CLAUDE.md
codex-rs/windows-sandbox-rs/: AGENTS.md  BUILD.bazel  CLAUDE.md  Cargo.toml  sandbox_smoketests.py
(+2372 files in other folders)
