[package]
name = "orbit-code-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "orbit_code_anthropic"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
orbit-code-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
pretty_assertions = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
