[package]
name = "orbit-code-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "orbit_code_app_server_client"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
orbit-code-app-server = { workspace = true }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-arg0 = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-feedback = { workspace = true }
orbit-code-protocol = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
