[package]
name = "orbit-code-app-server-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-otel = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tungstenite = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
