[package]
name = "orbit-code-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit-code-app-server"
path = "src/main.rs"

[[bin]]
name = "orbit-code-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "orbit_code_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
orbit-code-arg0 = { workspace = true }
orbit-code-cloud-requirements = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-environment = { workspace = true }
orbit-code-otel = { workspace = true }
orbit-code-shell-command = { workspace = true }
orbit-code-utils-cli = { workspace = true }
orbit-code-utils-pty = { workspace = true }
orbit-code-backend-client = { workspace = true }
orbit-code-file-search = { workspace = true }
orbit-code-chatgpt = { workspace = true }
orbit-code-login = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-feedback = { workspace = true }
orbit-code-rmcp-client = { workspace = true }
orbit-code-state = { workspace = true }
orbit-code-utils-absolute-path = { workspace = true }
orbit-code-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
core_test_support = { workspace = true }
orbit-code-utils-cargo-bin = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
wiremock = { workspace = true }
shlex = { workspace = true }
