[package]
name = "orbit-code-arg0"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "orbit_code_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
orbit-code-apply-patch = { workspace = true }
orbit-code-linux-sandbox = { workspace = true }
orbit-code-sandboxing = { workspace = true }
orbit-code-shell-escalation = { workspace = true }
orbit-code-utils-home-dir = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
