[package]
name = "orbit-code-chatgpt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
orbit-code-connectors = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-utils-cli = { workspace = true }
orbit-code-utils-cargo-bin = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
orbit-code-git = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
