[package]
name = "orbit-code"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit-code"
path = "src/main.rs"

[lib]
name = "orbit_code_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
orbit-code-app-server = { workspace = true }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-app-server-test-client = { workspace = true }
orbit-code-arg0 = { workspace = true }
orbit-code-utils-cli = { workspace = true }
orbit-code-config = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-exec = { workspace = true }
orbit-code-execpolicy = { workspace = true }
orbit-code-login = { workspace = true }
orbit-code-mcp-server = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-rmcp-client = { workspace = true }
orbit-code-state = { workspace = true }
orbit-code-stdio-to-uds = { workspace = true }
orbit-code-tui = { workspace = true }
orbit-code-tui-app-server = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true }
serde_json = { workspace = true }
supports-color = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
orbit_code_windows_sandbox = { package = "orbit-code-windows-sandbox", path = "../windows-sandbox-rs" }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
orbit-code-utils-cargo-bin = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
sqlx = { workspace = true }
