[package]
edition.workspace = true
license.workspace = true
name = "orbit-code-core"
version.workspace = true

[lib]
doctest = false
name = "orbit_code_core"
path = "src/lib.rs"

[[bin]]
name = "orbit-code-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.8.2"
async-channel = { workspace = true }
async-trait = { workspace = true }
askama = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chardetng = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
orbit-code-api = { workspace = true }
orbit-code-anthropic = { workspace = true }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-apply-patch = { workspace = true }
orbit-code-async-utils = { workspace = true }
orbit-code-analytics = { workspace = true }
orbit-code-client = { workspace = true }
orbit-code-config = { workspace = true }
orbit-code-core-skills = { workspace = true }
orbit-code-environment = { workspace = true }
orbit-code-exec-server = { workspace = true }
orbit-code-features = { workspace = true }
orbit-code-shell-command = { workspace = true }
orbit-code-skills = { workspace = true }
orbit-code-execpolicy = { workspace = true }
orbit-code-file-search = { workspace = true }
orbit-code-git = { workspace = true }
orbit-code-git-utils = { workspace = true }
orbit-code-hooks = { workspace = true }
orbit-code-instructions = { workspace = true }
orbit-code-keyring-store = { workspace = true }
orbit-code-login = { workspace = true }
orbit-code-network-proxy = { workspace = true }
orbit-code-otel = { workspace = true }
orbit-code-artifacts = { workspace = true }
orbit-code-plugin = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-rmcp-client = { workspace = true }
orbit-code-rollout = { workspace = true }
orbit-code-sandboxing = { workspace = true }
orbit-code-state = { workspace = true }
orbit-code-terminal-detection = { workspace = true }
orbit-code-utils-absolute-path = { workspace = true }
orbit-code-utils-cache = { workspace = true }
orbit-code-utils-image = { workspace = true }
orbit-code-utils-home-dir = { workspace = true }
orbit-code-utils-output-truncation = { workspace = true }
orbit-code-utils-path = { workspace = true }
orbit-code-utils-plugins = { workspace = true }
orbit-code-utils-pty = { workspace = true }
orbit-code-utils-readiness = { workspace = true }
orbit-code-secrets = { workspace = true }
orbit-code-utils-string = { workspace = true }
orbit-code-utils-stream-parser = { workspace = true }
orbit-code-utils-template = { workspace = true }
orbit-code-windows-sandbox = { package = "orbit-code-windows-sandbox", path = "../windows-sandbox-rs" }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
encoding_rs = { workspace = true }
env-flags = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
keyring = { workspace = true, features = ["crypto-rust"] }
libc = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
os_info = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "parsing",
    "local-offset",
    "macros",
] }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
wildmatch = { workspace = true }
zip = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["linux-native-async-persistent"] }
landlock = { workspace = true }
seccompiler = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
keyring = { workspace = true, features = ["apple-native"] }

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Shell",
] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }

[target.'cfg(unix)'.dependencies]
orbit-code-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
orbit-code-arg0 = { workspace = true }
orbit-code-otel = { workspace = true, features = [
    "disable-default-metrics-exporter",
] }
orbit-code-test-macros = { workspace = true }
orbit-code-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
