[package]
name = "orbit-code-exec"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit-code-exec"
path = "src/main.rs"

[lib]
name = "orbit_code_exec"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
orbit-code-arg0 = { workspace = true }
orbit-code-app-server-client = { workspace = true }
orbit-code-app-server-protocol = { workspace = true }
orbit-code-core = { workspace = true }
orbit-code-feedback = { workspace = true }
orbit-code-otel = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-utils-absolute-path = { workspace = true }
orbit-code-utils-cli = { workspace = true }
orbit-code-utils-elapsed = { workspace = true }
orbit-code-utils-oss = { workspace = true }
orbit-code-utils-sandbox-summary = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
orbit-code-apply-patch = { workspace = true }
orbit-code-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
rmcp = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
