[package]
name = "orbit-code-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Codex exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "orbit_code_execpolicy"
path = "src/lib.rs"

[[bin]]
name = "orbit-code-execpolicy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
orbit-code-utils-absolute-path = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
