[package]
edition.workspace = true
license.workspace = true
name = "orbit-code-features"
version.workspace = true

[lib]
doctest = false
name = "orbit_code_features"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
orbit-code-login = { workspace = true }
orbit-code-otel = { workspace = true }
orbit-code-protocol = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
