load("//:defs.bzl", "orbit_code_rust_crate")

SCHEMA_FIXTURES = glob(["schema/generated/*.json"], allow_empty = False)

orbit_code_rust_crate(
    name = "hooks",
    crate_name = "orbit_code_hooks",
    compile_data = SCHEMA_FIXTURES,
    integration_compile_data_extra = SCHEMA_FIXTURES,
    test_data_extra = SCHEMA_FIXTURES,
)
