[package]
edition.workspace = true
license.workspace = true
name = "orbit-code-instructions"
version.workspace = true

[lib]
doctest = false
name = "orbit_code_instructions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
orbit-code-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = { workspace = true }
