[package]
name = "orbit-code-linux-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "orbit-code-linux-sandbox"
path = "src/main.rs"

[lib]
name = "orbit_code_linux_sandbox"
path = "src/lib.rs"

[lints]
workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
clap = { workspace = true, features = ["derive"] }
orbit-code-core = { workspace = true }
orbit-code-protocol = { workspace = true }
orbit-code-utils-absolute-path = { workspace = true }
landlock = { workspace = true }
libc = { workspace = true }
seccompiler = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }

[build-dependencies]
cc = "1"
pkg-config = "0.3"
